--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
+    "@types/uuid": "^10.0.0",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
+    "uuid": "^11.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
