fix: update Vercel output directory path to dist/spa for correct deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "buildCommand": "npm run build:client",
-  "outputDirectory": "dist",
+  "outputDirectory": "dist/spa",
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
   ]
