--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@mux/mux-node": "^12.8.0",
+    "@mux/mux-player-react": "^3.6.1",
     "@supabase/supabase-js": "^2.55.0",
     "@types/uuid": "^10.0.0",
+    "@uploadthing/react": "^7.3.3",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
+    "uploadthing": "^7.7.4",
     "uuid": "^11.1.0",
     "zod": "^3.23.8"
   },
