--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@supabase/supabase-js": "^2.55.0",
     "@types/uuid": "^10.0.0",
     "@uploadthing/react": "^7.3.3",
+    "@vercel/speed-insights": "^1.2.0",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "uploadthing": "^7.7.4",
