--- a/supabase/functions/.vscode/settings.json
+++ b/supabase/functions/.vscode/settings.json
@@ -2,5 +2,12 @@
   "deno.enable": true,
   "deno.lint": true,
   "deno.unstable": true,
-  "deno.config": "./deno.json"
+  "deno.config": "./deno.json",
+  "typescript.preferences.includePackageJsonAutoImports": "off",
+  "[typescript]": {
+    "editor.defaultFormatter": "denoland.vscode-deno"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "denoland.vscode-deno"
+  }
 }
