--- a/supabase/functions/deno.json
+++ b/supabase/functions/deno.json
@@ -4,11 +4,11 @@
     "lib": ["deno.window", "deno.unstable"],
     "strict": true,
     "types": [
-      "https://esm.sh/@supabase/functions-js/src/edge-runtime.d.ts"
+      "https://deno.land/x/xhr@0.3.0/mod.ts"
     ]
   },
   "imports": {
-    "supabase": "https://esm.sh/@supabase/supabase-js@2",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2",
     "serve": "https://deno.land/std@0.224.0/http/server.ts"
   }
 }
